# Django-crud-library

./: LICENSE  README.rst  setup.cfg
DjangoCrud/: apps.py  models.py  views.py
DjangoCrud/migrations/: 0001_initial.py
my_django_crud.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
