[metadata]

name = my-django-crud
version = 1.5
author = Jehoshaphat Tatiglo
author_email = khalshaphat@gmail.com
maintainer = Jehoshaphat Tatiglo
maintainer_email = khalshaphat@gmail.com
description = This is a python library that helps you create CRUD functionalites in django with few lines of code.
long_description = file:README.rst
license = MIT
keywords = django crud python library
classifiers = 
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find: